Fix form lite button alignment [TMZ-187] (#96)

--- a/modules/forms/assets/scss/widgets/hello-plus-forms.scss
+++ b/modules/forms/assets/scss/widgets/hello-plus-forms.scss
@@ -86,7 +86,7 @@
 	}
 
 	&__field-group,
-	&__button[type="submit"] {
+	&__submit-group {
 		width: 100%;
 
 		&.has-width {
@@ -163,9 +163,9 @@
 	}
 
 	&__submit-group {
+		align-items: flex-end;
 		display: flex;
 		justify-content: var(--ehp-form-button-align);
-		margin-top: var(--ehp-form-row-gap);
 	}
 
 	&__button[type="submit"] {
@@ -174,6 +174,7 @@
 		color: var(--ehp-form-button-text-color);
 		display: flex;
 		flex-direction: var(--ehp-form-button-icon-position);
+		flex-grow: 1;
 		justify-content: center;
 		gap: var(--ehp-form-button-icon-spacing);
 		text-decoration: none;
